--- a/src/plove-old/Makefile.vc
+++ b/src/plove-old/Makefile.vc
@@ -4,10 +4,18 @@
 !include ..\..\configuser.vc
 
 #
+# Local setup
+#
+!if "$(PLOVE_EMBED_TCL)"=="yes"
+PLOVE_EXE_IF_NEEDED=plove.exe
+!else
+PLOVE_EXE_IF_NEEDED=
+!endif
+
+#
 # Local definitions
 #
 COPTS=$(CFLAGS) $(TK_CFLAGS)
-
 OBJS = plove.obj
 
 #
@@ -15,15 +23,15 @@ OBJS = plove.obj
 #       stock plove.bat right after installation
 #
 
-all:
+all: $(PLOVE_EXE_IF_NEEDED)
 	echo @$(WISH:/=\) -f $(OMNETPP_SRC_DIR)/plove/plove %%1 %%2 %%3 %%4 %%5 %%6 %%7 %%8 %%9 > plove.bat
-        copy plove.bat $(OMNETPP_BIN_DIR:/=\)
+	del $(OMNETPP_BIN_DIR:/=\)\plove.bat $(OMNETPP_BIN_DIR:/=\)\plove.exe 2> nul
+        if "$(PLOVE_EXE_IF_NEEDED)x"=="x"  copy plove.bat $(OMNETPP_BIN_DIR:/=\)
+        if not "$(PLOVE_EXE_IF_NEEDED)x"=="x"  copy plove.exe $(OMNETPP_BIN_DIR:/=\)
 
 plove.bat:
 	echo @$(WISH:/=\) -f $(OMNETPP_SRC_DIR)/plove/plove %%1 %%2 %%3 %%4 %%5 %%6 %%7 %%8 %%9 > plove.bat
         copy plove.bat $(OMNETPP_BIN_DIR:/=\)
-
-plove : plove.exe
 
 plove.exe : $(OBJS)
 	$(LINK) /out:"plove.exe" $(OBJS) $(LDFLAGS) $(TK_LIBS) $(SYS_LIBS)
