--- a/src/plove-old/Makefile.in
+++ b/src/plove-old/Makefile.in
@@ -41,7 +41,7 @@ plove-sh:
 	chmod +x plove
 
 plove-bat:
-	echo "@$(WISH) -f $(OMNETPP_PLOVE_DIR)/plove.sh %%1 %%2 %%3 %%4 %%5 %%6 %%7 %%8 %%9" > plove.bat
+	echo "@$(WISH) -f $(OMNETPP_PLOVE_DIR)/plove.sh %1 %2 %3 %4 %5 %6 %7 %8 %9" > plove.bat
 
 plove-exe: $(OBJS)
 	$(CC) $(LDFLAGS) $(OBJS) $(TK_LIBS) $(SYS_LIBS) -o plove
