--- a/src/gned/Makefile.vc
+++ b/src/gned/Makefile.vc
@@ -77,11 +77,11 @@ depend:
 	@ echo *** make depend not (yet) supported with MSVC
 
 clean:
-	del tclcode.cc *.obj gned.exe 2> nul
-	del *.ilk *.idb *.pdb 2> nul
+	-del tclcode.cc *.obj gned.exe 2> nul
+	-del *.ilk *.idb *.pdb 2> nul
 
 realclean: clean
-	del lex.yy.c ebnf.tab.c ebnf.tab.h
+	-del lex.yy.c ebnf.tab.c ebnf.tab.h
 
 # DO NOT DELETE THIS LINE -- make depend depends on it.
 
