--- a/src/plove-old/Makefile.vc
+++ b/src/plove-old/Makefile.vc
@@ -30,7 +30,7 @@ OBJS = plove.obj
 
 all: $(PLOVE_EXE_IF_NEEDED)
 	echo @$(WISH:/=\) -f $(OMNETPP_SRC_DIR)/plove/plove.sh %%1 %%2 %%3 %%4 %%5 %%6 %%7 %%8 %%9 > plove.bat
-	del $(OMNETPP_BIN_DIR:/=\)\plove.bat $(OMNETPP_BIN_DIR:/=\)\plove.exe 2> nul
+	-del $(OMNETPP_BIN_DIR:/=\)\plove.bat $(OMNETPP_BIN_DIR:/=\)\plove.exe 2> nul
         if "$(PLOVE_EXE_IF_NEEDED)x"=="x"  copy plove.bat $(OMNETPP_BIN_DIR:/=\)
         if not "$(PLOVE_EXE_IF_NEEDED)x"=="x"  copy plove.exe $(OMNETPP_BIN_DIR:/=\)
 
@@ -55,7 +55,7 @@ depend:
 	@ echo *** make depend not (yet) supported with MSVC
 
 clean:
-	del tclcode.cc *.obj plove.exe 2> nul
-	del *.ilk *.idb *.pdb 2> nul
+	-del tclcode.cc *.obj plove.exe 2> nul
+	-del *.ilk *.idb *.pdb 2> nul
 
 # DO NOT DELETE THIS LINE -- make depend depends on it.
