--- a/src/utils/Makefile.vc
+++ b/src/utils/Makefile.vc
@@ -21,8 +21,8 @@ opp_replace.exe: opp_replace.c
 depend:
 	@ echo *** make depend not (yet) supported with MSVC
 clean:
-	del *.obj seedtool.exe tcl2c.exe opp_replace.exe 2> nul
-	del *.ilk *.idb *.pdb 2> nul
+	-del *.obj seedtool.exe tcl2c.exe opp_replace.exe 2> nul
+	-del *.ilk *.idb *.pdb 2> nul
 
 # DO NOT DELETE THIS LINE -- make depend depends on it.
 
