--- a/src/sim/Makefile.vc
+++ b/src/sim/Makefile.vc
@@ -147,10 +147,10 @@ depend:
 	@ echo *** make depend not (yet) supported with MSVC
 
 clean:
-	del *.obj
-	del sim_std.lib sim_std.dll sim_std.ilib sim_std.exp std\*.obj 2> nul
-	del sim_pvm.lib sim_pvm.dll sim_pvm.ilib sim_pvm.exp pvm\*.obj 2> nul
-	del *.ilk *.idb *.pdb 2> nul
+	-del *.obj
+	-del sim_std.lib sim_std.dll sim_std.ilib sim_std.exp std\*.obj 2> nul
+	-del sim_pvm.lib sim_pvm.dll sim_pvm.ilib sim_pvm.exp pvm\*.obj 2> nul
+	-del *.ilk *.idb *.pdb 2> nul
 
 
 # DO NOT DELETE THIS LINE -- make depend depends on it.
