*** empty log message ***

--- a/tutorial/doc_src/Makefile
+++ b/tutorial/doc_src/Makefile
@@ -1,2 +1,9 @@
-# how to produce pdf from the tex file...
+#
+# Makefile to produce pdf from the tex sources
+#
 
+all: tutorial.pdf
+
+tutorial.pdf: tutorial.tex tutorial.bbl
+	latex tutorial.tex
+	dvipdf tutorial.dvi
