--- a/Makefile.in
+++ b/Makefile.in
@@ -109,6 +109,9 @@ token:
 demo:
 	cd $(OMNETPP_SAMPLES_DIR)/demo && $(MAKE)
 
+tutorial:
+	cd $(OMNETPP_TUTORIAL_DIR)/queues && $(MAKE)
+
 #=====================================================================
 #
 # Utilities
@@ -141,6 +144,7 @@ clean:
 	for i in $(SAMPLES); do \
 	    (cd $(OMNETPP_SAMPLES_DIR)/$$i && $(MAKE) clean); \
 	done
+	cd $(OMNETPP_TUTORIAL_DIR)/queues && $(MAKE) clean;
 
 depend:
 	for i in $(LIBS) $(PROGS); do \
